# evaluation_nodes

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin.xml  pyproject.toml  setup.py
.github/workflows/: ros.yml
config/: config.rviz  evaluation.perspective
include/evaluation_nodes/: fre_counter.h
launch/: dashboard.launch  evaluation.launch
msg/: Count.msg
src/: compare_maps.py  detection_spawner.py  evaluation_plugin.py  fre_counter.cpp  fre_counter_node.cpp
src/evaluation_nodes/: compare_maps.py  detection_spawner.py  evaluation_plugin.py  rqt.py
src/evaluation_nodes/evaluation_plugin_widgets/: maps.py  robot_name.py  rviz.py  settings.py
src/evaluation_plugin_widgets/: image.py  robot_name.py  settings.py
