<?xml version="1.0"?>
<package format="3">
  <name>evaluation_nodes</name>
  <version>0.5.0</version>
  <description>The evaluation_nodes package</description>

  <maintainer email="info@fieldrobot.com">Field Robot Event Organization</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
